修改demo2的task.css

--- a/demo2/style/task.css
+++ b/demo2/style/task.css
@@ -75,8 +75,8 @@ body {
 
 .task {
 	position: absolute;
-	width: 40%;
-	height: 80%;
+	min-width: 40%;
+	min-height: 80%;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
